[package]
name = "rust_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# disable eh_personality Language Item used for implementing stack unwinding
[profile.dev]
panic = "abort"

# profile used for `cargo build --release`
[profile.release]
panic = "abort"