[package]
name = "rust_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"

# lazily initialize static Global writer at run-time
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"] # we don't use std library

# disable eh_personality Language Item used for implementing stack unwinding
[profile.dev]
panic = "abort"

# profile used for `cargo build --release`
[profile.release]
panic = "abort"